--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <h1>Hi, this is Shoha's Git Demo</h1>
     <h2>Hey Shoha this is Josh!</h2>
     <p>Welcome to Vanguard 77</p>
+
+    <h6>Matias Commit</h6>
 </body>
 </html>
